@@ -6,13 +6,14 @@ Summary of important user-visible changes for BioPerl
       using SUPER::new() [#307].
     * Fix test for BSML SAX by using lax parser XML::SAX::PurePerl since
       the external DTD URL now 404s [#376].
+    * Added codon table 15 Bio::Tools::CodonTable [#389].
 
 1.7.8     2021-02-02 23:02:18-06:00 America/Chicago
     * Bio::SeqIO::interpro has been moved to a separate repository to
       deal with issues with XML::DOM::XPath bitrot [#347]
     * Pull requests:
       * Adjust Swiss-Prot FT A..B lines [#348] from @smoe
-      * Update %FTQUAL_NO_QUOTE: List of qualifiers without quote [#339] from 
+      * Update %FTQUAL_NO_QUOTE: List of qualifiers without quote [#339] from
         @hdevillers
 
 1.7.7     2019-12-07 13:41:36-06:00 America/Chicago
@@ -27,7 +28,7 @@ Summary of important user-visible changes for BioPerl
       and a 'private' _sleep() function that mirror those from
       Bio::DB::WebDBSeqI, primarily for compliance with potential website
       restrictions for the number and frequency of queries (e.g. NCBI eUtils).
-      
+
     * Fix bug #329, related to Bio::Tree::Statistics::transfer_bootstrap_expectation
       in last release.
 
